Source/WebCore/rendering/svg/RenderSVGResourceContainer.cpp
@@ -23,6 +23,7 @@
 #include "RenderSVGResourceContainer.h"
 
 #include "RenderSVGShadowTreeRootContainer.h"
+#include "RenderView.h"
 #include "SVGResourcesCache.h"
 #include "SVGStyledTransformableElement.h"
 
